style: prevent overflow

--- a/src/encoded/static/scss/encoded/modules/_static-pages.scss
+++ b/src/encoded/static/scss/encoded/modules/_static-pages.scss
@@ -1190,6 +1190,14 @@ body[data-path='/'] > #application > #layout {
                                                 background-color: transparent;
                                                 border: none;
                                                 color: #485983;
+
+                                                span {
+                                                    max-width: 160px;
+                                                    text-align: left;
+                                                    text-overflow: ellipsis;
+                                                    white-space: nowrap;
+                                                    overflow: hidden;
+                                                }
                                             }
                                         }
                                     }
